src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Definition of the design system. All colors, gradients, fonts, etc should be defined here. 
All colors MUST be HSL.
*/

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 180 100% 17%;

    --card: 0 0% 100%;
    --card-foreground: 180 100% 17%;

    --popover: 0 0% 100%;
    --popover-foreground: 180 100% 17%;

    --primary: 182 100% 18%;
    --primary-foreground: 0 0% 98%;

    --secondary: 47 98% 54%;
    --secondary-foreground: 180 100% 17%;

    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;

    --accent: 47 98% 54%;
    --accent-foreground: 180 100% 17%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
    --ring: 182 100% 18%;

    --radius: 0.5rem;

    --sidebar-background: 0 0% 98%;
    --sidebar-foreground: 240 5.3% 26.1%;
    --sidebar-primary: 240 5.9% 10%;
    --sidebar-primary-foreground: 0 0% 98%;
    --sidebar-accent: 240 4.8% 95.9%;
    --sidebar-accent-foreground: 240 5.9% 10%;
    --sidebar-border: 220 13% 91%;
    --sidebar-ring: 217.2 91.2% 59.8%;
  }

  .dark {
    --background: 180 100% 17%;
    --foreground: 210 40% 98%;

    --card: 180 100% 17%;
    --card-foreground: 210 40% 98%;

    --popover: 180 100% 17%;
    --popover-foreground: 210 40% 98%;

    --primary: 47 98% 54%;
    --primary-foreground: 180 100% 17%;

    --secondary: 182 100% 18%;
    --secondary-foreground: 210 40% 98%;

    --accent: 47 98% 54%;
    --accent-foreground: 180 100% 17%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;

    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 17.5%;
    --ring: 47 98% 54%;
    --sidebar-background: 240 5.9% 10%;
    --sidebar-foreground: 240 4.8% 95.9%;
    --sidebar-primary: 224.3 76.3% 48%;
    --sidebar-primary-foreground: 0 0% 100%;
    --sidebar-accent: 240 3.7% 15.9%;
    --sidebar-accent-foreground: 240 4.8% 95.9%;
    --sidebar-border: 240 3.7% 15.9%;
    --sidebar-ring: 217.2 91.2% 59.8%;
  }
}

@layer base {
  * {
    @apply border-border;
  }

  body {
    @apply bg-background text-foreground font-sans;
  }
}

